        - Tester has been significantly beefed to to properly know when it has
          been left in an inconsistent state, and properly cleans itself up in
          all three phases (start, stop and status). (closes #219)
        - fixed a regression where somehow, the LCD object was being created in
          loop fashion, crashing when the limit of eight was reached 
          (closes #221)

2.18    2017-06-25
        - logging output modifications (changes and relocations)
        - in Git::listen(), we now make comparisons of the commit checksums, and
          if they are equal, we no longer perform a pull request
        - added Test::BrewBuild::Plugin::Author as a required dependency
        - added a section to Tutorial that covers using Plugins
        - for RPi LCD mode, changed commit csum to 7 chars as opposed to 8,
          which is typical/common across the board
        - major changes on how we figure out which module is the distribution
          name. Instead of taking the first module name found, we check each one
          with MetaCPAN::Client, and use the first one found that is a legit
          distribution (work on #208)
        - fix uninit warning in bbtester. We were trying to use $ARGV[0] even
          in cases where it wasn't defined
        - fix issue where in Dispatch, we were loading the wrong directive
          value into $self->{auto_sleep} from the config file
        - fix issue where we getting segfaults when bbdispatch was in auto mode
          with --rpi enabled. We were creating a new LCD on each run, and were
          eventually hitting wiringPi's MAX_LCD (8) limit. Moved the LCD init
          to run once on object instantiation (fixes #209; fixes 
          stevieb9/rpi-lcd#6)
        - in bbdispatch, the --repo|-r flag will prepend https://github.com if
          you omit it. To do so, you need to specify the repo in 
          "user/repo-name" format